--- a/Murphy Main Page.html
+++ b/Murphy Main Page.html
@@ -10,17 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="navigaton">Navigation bar</div>
-  <nav>
-          <ul>
-             <li><a href="Murphy Main Page.html">HOME</a></li>
-             <li>SEDAN</li>
-             <li>SUV</li>
-             <li><a href="MurphyTruckPage.html">TRUCK</a></li>
-             <li>INVENTORY</li>
-         </ul>
-  </nav>
-
+ 
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -63,6 +53,20 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</div>
+ <div class="logo">
+    <img src="images/Murphy-Auto-Logo.png" alt="Murphy Logo" style="width: 460px; height: 450px;">
+  </div>
+  <div class="navigaton">
+  <nav>
+          <ul>
+             <li><a href="Murphy Main Page.html">HOME</a></li>
+             <li>SEDAN</li>
+             <li>SUV</li>
+             <li><a href="MurphyTruckPage.html">TRUCK</a></li>
+             <li>INVENTORY</li>
+         </ul>
+  </nav>
 </div>
 <div class="pic1">
     <img src="images/4x4.jpg" alt="Toyota 4x4" style="width:750px;height:480px;">
